--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,9 +14,9 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">header link 1</a></li>
-                    <li><a href="#">header link 2</a></li>
-                    <li><a href="#">header link 3</a></li>
+                    <li>header link 1</li>
+                    <li>header link 2</li>
+                    <li>header link 3</li>
                 </ul>
             </div>
         </div>
