website skeleton done

--- a/index.html
+++ b/index.html
@@ -21,16 +21,47 @@
             </div>
         </div>
         <div class="hero">
-
+            <div class="hero-txt">
+                <p class="hero-title">This Website is awsome</p>
+                <p class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button> Sign up</button>
+            </div>
+            <div class="hero-img">
+                <p>this is a placeholder for a img</p>
+            </div>
         </div>
         <div class="information">
+            <div class="info-logo">Some random information</div>
+            <div class="info-sub1">
 
+            </div>
+            <div class="info-sub2">
+
+            </div>
+            <div class="info-sub3">
+
+            </div>
+            <div class="info-sub4">
+
+            </div>
         </div>
         <div class="quote">
-
+            <p class="quote-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
+                is that it looks nice.</p>
+            <p class="qoute-sub">-Thor, God of Thunder</p>
         </div>
         <div class="sign-up">
-
+            <div class="sign-up-txt">
+                <p class="sign-up-info">
+                    Call action! It`s time!
+                </p>
+                <p class="sign-up-info2">
+                    Sign up for our product by clicking that button right over there!
+                </p>
+            </div>
+            <div class="sign-up-button">
+                <button class="sign-up-button">sign-up</button>
+            </div>
         </div>
         <div class="footer">
             <p>Copyright © The Odin Project 2021</p>
