--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                 </div>
             </div>
         </div>
-        <div class="quote">
-            <p class="quote-txt">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know
-                is that it looks nice.</p>
-            <p class="qoute-sub">-Thor, God of Thunder</p>
+        <div class="quote-part">
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="author">
+                -Thor, God of Thunder
+            </div>
         </div>
         <div class="sign-up">
             <div class="sign-up-txt">
@@ -76,7 +79,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>Copyright © The Odin Project 2021</p>
+            <p>Copyright © The Odin Project 2025</p>
         </div>
     </div>
 </body>
